--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,14 @@
 {
     "configurations": [
         {
-            "name":"Python: Django",
-            "type":"python",
-            "request":"launch",
-            "program":"manage.py",
-            "args":["runserver"],
-            "django":true,
-        }
+            "name": "Python Django",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/manage.py",
+            "args": [
+                "runserver"
+            ],
+            "django": true
+        },
     ]
 }
