--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,22 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "python.testing.pytestArgs": [
+        "jiyukenkyu_app"
+    ],
+    "python.analysis.extraPaths": [
+        "/Users/r-okajima/miniforge3/lib/python3.10/site-packages/"
+    ],
+    "python.testing.unittestEnabled": true,
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./jiyukenkyu_app",
+        "-p",
+        "test*.py"
+    ],
+    "editor.formatOnSave": true,
+    "emmet.includeLanguages": {
+        "django-html": "html",
+    },
 }
